syntax = "proto3";

package proto;

service ChatService {
	rpc SignIn(SignInRequest) returns (SignInResponse);
	rpc SignOut(SignOutRequest) returns (SignOutResponse);
	rpc Chattering(stream ChatRequest) returns (stream ChatResponse);
}

message SignInResponse {
}

message SignOutResponse {
}

message SignInRequest {
}

message SignOutRequest {
}

message ChatResponse {
	string body = 1;
	string person = 2;
}

message ChatRequest {
	string body = 1;
	string person = 2;
}
